Fixes border radius on ios

--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -58,7 +58,7 @@
         padding: 0px 10px;
         font-size: 12px;
         margin-right: 5px;
-
+        box-shadow: 0px 0px 0px 1px #000;
         outline: 1px solid;
         @include mobile {
           font-size: 10px;
